<resources>
    <string name="app_name">Admin</string>
    <string name="nik">NIK</string>
    <string name="tanggal">Tanggal</string>
    <string name="laporan_pengaduan">Laporan pengaduan</string>
    <string name="catatan">Catatan</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="pengadu_id">Pengadu Id</string>
    <string name="batalkan_konfirmasi">Batalkan konfirmasi</string>
    <string name="hapus">Hapus</string>
    <string name="update_data">Update data</string>
    <string name="title_notification">Title Notification</string>
    <string name="deskripsi_pesan">Deskripsi pesan</string>
</resources>